add 5.16.0; update apache conf

--- a/apache2.conf
+++ b/apache2.conf
@@ -1,5 +1,6 @@
 ServerLimit 50
 MaxClients 50
+Listen 80
 #
 # Based upon the NCSA server configuration files originally by Rob McCool.
 #
@@ -50,8 +51,8 @@ MaxClients 50
 # Do NOT add a slash at the end of the directory path.
 #
 ServerRoot "/etc/apache2"
-ServerName cpxxxan.barnyard.co.uk
-NameVirtualHost 78.47.79.139
+ServerName cpxxxan.uk2.barnyard.co.uk
+NameVirtualHost 109.123.89.254
 
 DirectoryIndex index.pl index.shtml index.html
 
@@ -108,7 +109,7 @@ KeepAliveTimeout 15
     StartServers          5
     MinSpareServers       5
     MaxSpareServers      10
-    MaxClients          150
+    MaxClients          50
     MaxRequestsPerChild   0
 </IfModule>
 
@@ -121,7 +122,7 @@ KeepAliveTimeout 15
 # MaxRequestsPerChild: maximum number of requests a server process serves
 <IfModule mpm_worker_module>
     StartServers          2
-    MaxClients          150
+    MaxClients          50
     MinSpareThreads      25
     MaxSpareThreads      75 
     ThreadsPerChild      25
@@ -190,9 +191,6 @@ LogLevel warn
 # Include module configuration:
 Include /etc/apache2/mods-enabled/*.load
 Include /etc/apache2/mods-enabled/*.conf
-
-# Include ports listing
-Include /etc/apache2/ports.conf
 
 # Include generic snippets of statements
 Include /etc/apache2/conf.d/
@@ -505,17 +503,6 @@ ServerSignature On
     AddCharset shift_jis   .shift_jis .sjis
 
     #
-    # AddHandler allows you to map certain file extensions to "handlers":
-    # actions unrelated to filetype. These can be either built into the server
-    # or added with the Action directive (see below)
-    #
-    # To use CGI scripts outside of ScriptAliased directories:
-    # (You will also need to add "ExecCGI" to the "Options" directive.)
-    #
-    AddHandler cgi-script .pl
-    AddHandler cgi-script .py
-
-    #
     # For files that include their own HTTP headers:
     #
     #AddHandler send-as-is asis
@@ -670,3 +657,21 @@ ServerSignature On
 
 # Include the virtual host configurations:
 Include /web/cpxxxan/apache-conf/
+
+<VirtualHost cpxxxan.barnyard.co.uk cpxxxan.uk2.barnyard.co.uk>
+  CustomLog logs/cpxxxan.barnyard.co.uk-access_log combined
+  ErrorLog /var/log/apache2/cpxxxan.barnyard.co.uk-error_log
+  DocumentRoot "/web/cpxxxan/cpxxxan"
+  ServerAdmin webmaster@cantrell.org.uk
+  ServerName cpxxxan.barnyard.co.uk
+
+  AddType text/html .shtml
+  AddOutputFilter INCLUDES .shtml
+
+  <Directory "/web/cpxxxan/cpxxxan">
+    Options FollowSymLinks Includes
+    AllowOverride None
+    Order allow,deny
+    Allow from all
+  </Directory>
+</VirtualHost>
